# tn-nt-auth-templates

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .stylelintrc.json  CHANGELOG.md  MANIFEST.in  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: automated-checks.yml  pr-check.yml  pypi-release.yml
nbproject/: project.xml
templates/allianceauth/: side-menu.html  top-menu.html
templates/esi/: select_token.html
templates/fleetup/: characters.html  doctrine.html  doctrinesview.html  fitting.html  index.html
templates/public/: base.html  lang_select.html  login.html  middle_box.html  register.html
templates/services/teamspeak3/: teamspeakjoin.html
testauth/: local.py  settings.py
testauth/settings/: local.py
testauth/settings/development/: local.py
tnnt_templates/: __init__.py  app_settings.py  apps.py  auth_hooks.py  checks.py  constants.py  context_processors.py  providers.py  urls.py  views.py
tnnt_templates/discordbot/cogs/: about.py  auth.py  members.py  price_check.py  time.py  timers.py
tnnt_templates/helper/: static_files.py
tnnt_templates/locale/de/LC_MESSAGES/: django.mo  django.po
tnnt_templates/locale/en/LC_MESSAGES/: django.po
tnnt_templates/locale/es/LC_MESSAGES/: django.po
tnnt_templates/locale/fr_FR/LC_MESSAGES/: django.po
tnnt_templates/locale/ja/LC_MESSAGES/: django.po
tnnt_templates/locale/ko/LC_MESSAGES/: django.po
tnnt_templates/locale/ko_KR/LC_MESSAGES/: django.po
tnnt_templates/locale/ru/LC_MESSAGES/: django.po
tnnt_templates/locale/uk/LC_MESSAGES/: django.mo  django.po
tnnt_templates/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
tnnt_templates/management/commands/: tnnt_anonymize_emails.py
tnnt_templates/templates/allianceauth/: admin-menu-top.html  base-bs5.html  base.html  icons.html  messages.html  night-toggle.html  opengraph.html  tnnt-menu-top.html  top-menu-admin.html  top-menu-character-dropdown.html  top-menu-user-dropdown.html  top-menu.html
tnnt_templates/templates/authentication/: dashboard.html  dashboard_characters.html  tokens.html
tnnt_templates/templates/blacklist/: base.html  blacklist.html  evenotes.html
tnnt_templates/templates/bundles/: bootstrap-js-bs5.html  chart-js.html  clipboard-js.html  datatables-css-bs5.html  datatables-js-bs5.html  fontawesome.html  image-auth-logo.html  jquery-datetimepicker-css.html  jquery-datetimepicker-js.html  jquery-js.html  jquery-ui-js.html  jquery-visibility-js.html  moment-js.html
tnnt_templates/templates/corpstat/: alliancestats.html  base.html  corpstats.html  navigation.html  search.html
tnnt_templates/templates/django_bootstrap5/: field_errors.html
tnnt_templates/templates/esi/: select_token.html
tnnt_templates/templates/fittings/: add_doctrine.html  add_fit.html  base.html  create_category.html  dashboard.html  edit_category.html  edit_doctrine.html  edit_fit.html  view_all_categories.html  view_all_fits.html  view_category.html  view_doctrine.html  view_fit.html
tnnt_templates/templates/fleet/: base.html  create_fleet.html  dashboard.html  edit_fleet.html  fleet_details.html  join_fleet.html
tnnt_templates/templates/groupmanagement/: audit.html  groupmembers.html  groupmembership.html  groups.html  index.html
tnnt_templates/templates/hrapplications/: corpchoice.html  create.html  management.html  searchview.html  view.html
tnnt_templates/templates/mumbletemps/: base.html  create.html  index.html  link.html
tnnt_templates/templates/notifications/: list.html  view.html
tnnt_templates/templates/optimer/: add.html  fleetoptable.html  management.html  update.html
tnnt_templates/templates/package_monitor/: base.html  index.html
tnnt_templates/templates/permissions_tool/: audit.html  overview.html
tnnt_templates/templates/public/: base.html  lang_select.html  login.html  middle_box.html  register.html
tnnt_templates/templates/registration/: activate.html  registration_form.html
tnnt_templates/templates/services/: fleetformattertool.html  service_confirm_delete.html  service_credentials.html  service_password.html  services.html
tnnt_templates/templates/smartgroups/: groups.html  user_check.html
tnnt_templates/templates/srp/: add.html  data.html  management.html  request.html  update.html
tnnt_templates/templates/structures/: base.html
tnnt_templates/templates/structuretimers/: base.html  timer_confirm_delete.html  timer_edit.html  timer_list.html
tnnt_templates/templatetags/: tnnt_template_tags.py  tnnt_templates.py
tnnt_templates/tests/: test_app_settings.py  test_checks.py  test_command_anonymize_emails.py  test_context_processors.py  test_helper_static_files.py  test_providers.py  test_templatetags.py  test_theme_auth_hooks.py  utils.py
tnnt_templates/theme/terra_nanotech/: __init__.py  apps.py  auth_hooks.py
(+226 files in other folders)
