[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tnnt-templates"
version = "2.9.2"
description = "Terra Nanotech Template Overrides for Alliance Auth"
readme = "README.md"
license = "GPL-3.0"
requires-python = "~=3.8"
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
keywords = [
    "allianceauth",
    "eveonline",
    "template",
    "template_override",
    "terra_nanotech",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/terra-nanotech/tn-nt-auth-templates"
Documentation = "https://github.com/terra-nanotech/tn-nt-auth-templates/blob/master/README.md"
Changelog = "https://github.com/terra-nanotech/tn-nt-auth-templates/blob/master/CHANGELOG.md"


[tool.hatch.build]
include = [
    "/tnnt_templates",
]
