[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "tnnt-templates"
version = "2.11.6"
description = "Terra Nanotech Template Overrides for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "template",
    "template_override",
    "terra_nanotech",
]
license = {file = "LICENSE"}
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = "~=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=3.6",
]
[project.urls]
Changelog = "https://github.com/terra-nanotech/tn-nt-auth-templates/blob/master/CHANGELOG.md"
Documentation = "https://github.com/terra-nanotech/tn-nt-auth-templates/blob/master/README.md"
Homepage = "https://github.com/terra-nanotech/tn-nt-auth-templates"

[tool.hatch.build]
include = [
    "/tnnt_templates",
]
